log
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 08:47:55 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:11: error: expected ‘;’ before ‘}’ token
   38 |     size--
      |           ^
      |           ;
   39 |   }
      |   ~        
Compilation failed
5853533
Thu 14 Mar 2024 08:48:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
32fa24b
Thu 14 Mar 2024 08:54:27 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:54: error: invalid operands to binary * (have ‘long unsigned int’ and ‘int *’)
   70 |     arregloNuevo = realloc(arregloNuevo, sizeof(int) * (newSize + 1));
      |                                                      ^ ~~~~~~~~~~~~~
      |                                                                 |
      |                                                                 int *
Compilation failed
507ba2b
Thu 14 Mar 2024 08:54:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:20: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |     arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7254a7c
Thu 14 Mar 2024 08:55:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:72:22: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cfcf4e3
Thu 14 Mar 2024 08:55:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:72:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |       *arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                     ^
exercises.c:72:23: error: ‘arregloNuevo’ may be used uninitialized [-Werror=maybe-uninitialized]
   72 |       *arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ad676d
Thu 14 Mar 2024 08:58:37 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   78 |   return arregloNuevo;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
398f0c2
Thu 14 Mar 2024 08:58:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   78 |   return *arregloNuevo;
      |          ^~~~~~~~~~~~~
exercises.c:78:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   78 |   return *arregloNuevo;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
75965e6
